[package]
name = "Pulsewave-CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.32", features = ["derive", "env", "string", "cargo"] }
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
serde = { version = "1.0.219", features = ["derive"] }
zstd = "0.13.3"
